# Wallpaper-Creator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Context.hpp
include/exception/: ImageException.hpp  PixmapException.hpp  VideoException.hpp
include/graphics/: Drawable.hpp  Pixmap.hpp  Video.hpp
include/graphics/window/: Window.hpp
include/graphics/window/builder/: WindowBuilder.hpp
include/utils/: Builder.hpp  Property.hpp  Types.hpp  Vector.hpp
include/utils/thread/: AsyncQueue.hpp
src/: Context.cpp
src/graphics/: Pixmap.cpp  Video.cpp
src/graphics/window/: Window.cpp
src/graphics/window/builder/: WindowBuilder.cpp
